--- a/src/Daridakr.ProgGuru.Web/Daridakr.ProgGuru.Web.csproj
+++ b/src/Daridakr.ProgGuru.Web/Daridakr.ProgGuru.Web.csproj
@@ -4,6 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+	<AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
     <RootNamespace>Daridakr.ProgGuru.Web</RootNamespace>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
