--- a/src/Daridakr.ProgGuru.Web/Daridakr.ProgGuru.Web.csproj
+++ b/src/Daridakr.ProgGuru.Web/Daridakr.ProgGuru.Web.csproj
@@ -82,4 +82,10 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="tempkey.rsa">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
