--- a/src/Daridakr.ProgGuru.DbMigrator/appsettings.Staging.json
+++ b/src/Daridakr.ProgGuru.DbMigrator/appsettings.Staging.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=ProgGuru;Trusted_Connection=True"
+    "Default": "Server=tcp:progguruserver.database.windows.net,1433;Initial Catalog=ProgGuruDb;Persist Security Info=False;User ID=ianachern;Password=Ef8210105!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "IdentityServer": {
     "Clients": {
