--- a/src/Daridakr.ProgGuru.Web/appsettings.Staging.json
+++ b/src/Daridakr.ProgGuru.Web/appsettings.Staging.json
@@ -24,7 +24,7 @@
     "SelfUrl": "https://localhost:44364"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=ProgGuru;Trusted_Connection=True"
+    "Default": "Server=tcp:progguruserver.database.windows.net,1433;Initial Catalog=ProgGuruDb;Persist Security Info=False;User ID=ianachern;Password=Ef8210105!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44364",
