--- a/src/Daridakr.ProgGuru.Web/appsettings.Staging.json
+++ b/src/Daridakr.ProgGuru.Web/appsettings.Staging.json
@@ -21,13 +21,14 @@
     }
   },
   "App": {
-    "SelfUrl": "https://localhost:44364"
+    "SelfUrl": "https://progguruapi.azurewebsites.net",
+    "CorsOrigins": "https://*.ProgGuru.com,http://localhost:44364,https://localhost:44364"
   },
   "ConnectionStrings": {
     "Default": "Server=tcp:progguruserver.database.windows.net,1433;Initial Catalog=ProgGuruDb;Persist Security Info=False;User ID=ianachern;Password=Ef8210105!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44364",
+    "Authority": "https://progguruapi.azurewebsites.net/",
     "RequireHttpsMetadata": "false"
   },
   "StringEncryption": {
