configure anti forgery

--- a/src/Daridakr.ProgGuru.DbMigrator/appsettings.Staging.json
+++ b/src/Daridakr.ProgGuru.DbMigrator/appsettings.Staging.json
@@ -17,7 +17,7 @@
       "ProgGuru_BlazorServerTiered": {
         "ClientId": "ProgGuru_BlazorServerTiered",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://localhost:44314"
+        "RootUrl": "https://progguruapi.azurewebsites.net/"
       },
       "ProgGuru_Swagger": {
         "ClientId": "ProgGuru_Swagger",
